<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="MealViewModel"
            type="com.example.eatanddrink.viewmodel.meal.MealViewModel" />
        <variable
            name="DrinkiewModel"
            type="com.example.eatanddrink.viewmodel.drink.DrinkViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:contentScrim="@color/brown_200"
                app:statusBarScrim="@color/brown_200"

                app:expandedTitleTextAppearance="@style/Text.Yellow"
                app:collapsedTitleTextAppearance="@style/Text.Yellow"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false"
                android:background="@drawable/favourite2"
                android:outlineProvider="background"
                android:clipToPadding="false"
                android:fitsSystemWindows="true"

                >


            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_marginBottom="15dp"
            android:id="@+id/nested_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-35dp"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:cardCornerRadius="25dp"
            app:cardElevation="2dp"
            android:elevation="5dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_margin="@dimen/spacing_large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ViewPager.ViewPagerActivity15">

                        <TextView
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"

                            android:layout_marginStart="5dp"
                            android:id="@+id/lets_eat_tv"
                            app:layout_constraintStart_toStartOf="@+id/random_meal"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/let_s_eat"/>
                        <TextView
                            android:layout_marginStart="5dp"

                            android:id="@+id/lets_eat_description_tv"
                            app:layout_constraintTop_toBottomOf="@+id/lets_eat_tv"
                            app:layout_constraintStart_toStartOf="@+id/lets_eat_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/don_t_know_what_to_eat_we_pick_for_you"/>


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/random_meal"
                    app:layout_constraintTop_toBottomOf="@id/lets_eat_description_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:elevation="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/parent_view_meal"
                            android:layout_width="wrap_content"
                            android:layout_height="200dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            >

                            <ImageView
                                android:id="@+id/image_meal"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                app:categoryImage="@{MealViewModel.randomMeal.strMealThumb}"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:contentDescription="@string/meal_image" />
                            <View
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toTopOf="@id/title_meal"
                                android:background="@color/overlay_dark_50"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"/>
                            <TextView
                                android:id="@+id/title_meal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_small"
                                android:maxLines="2"
                                android:gravity="center"
                                android:text="@{MealViewModel.randomMeal.strMeal}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@android:color/white"
                                app:fontFamily="sans-serif-medium"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <Button
                            android:background="@drawable/btn_rounded_brown"
                            android:id="@+id/new_meal_btn"
                            app:layout_constraintTop_toBottomOf="@+id/random_meal"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/try_something_else"/>


                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"

                    android:layout_marginStart="5dp"
                    android:id="@+id/lets_drink_tv"
                    app:layout_constraintStart_toStartOf="@+id/random_meal"
                    app:layout_constraintTop_toBottomOf="@+id/new_meal_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/let_s_drink"/>
                <TextView
                    android:layout_marginStart="5dp"

                    android:id="@+id/lets_drink_description_tv"
                    app:layout_constraintTop_toBottomOf="@+id/lets_drink_tv"
                    app:layout_constraintStart_toStartOf="@+id/lets_drink_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_know_what_to_drink_we_pick_for_you"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/random_drink"
                    app:layout_constraintTop_toBottomOf="@id/lets_drink_description_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:elevation="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/parent_view_drink"
                            android:layout_width="wrap_content"
                            android:layout_height="200dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            >

                            <ImageView
                                android:id="@+id/image_drink"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                app:categoryImage="@{DrinkiewModel.randomDrink.strDrinkThumb}"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:contentDescription="@string/drink_image" />
                            <View
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toTopOf="@id/title_drink"
                                android:background="@color/overlay_dark_50"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"/>
                            <TextView
                                android:id="@+id/title_drink"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_small"
                                android:maxLines="2"
                                android:gravity="center"
                                android:text="@{DrinkiewModel.randomDrink.strDrink}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@android:color/white"
                                app:fontFamily="sans-serif-medium"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <Button
                    android:background="@drawable/btn_rounded_brown"
                    android:id="@+id/new_drink_btn"
                    app:layout_constraintTop_toBottomOf="@+id/random_drink"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/try_something_else"/>
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"

                    android:layout_marginStart="5dp"
                    android:id="@+id/fav_meal"
                    app:layout_constraintStart_toStartOf="@+id/random_meal"
                    app:layout_constraintTop_toBottomOf="@id/new_drink_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite_meals"/>
                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintTop_toBottomOf="@id/fav_meal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/meal_rv"
                    android:clipToPadding="false"
                    android:scrollbars="none"
                    android:scrollingCache="true"
                    android:orientation="horizontal"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"

                    android:layout_marginStart="5dp"
                    android:id="@+id/fav_drink"
                    app:layout_constraintStart_toStartOf="@+id/random_meal"
                    app:layout_constraintTop_toBottomOf="@id/meal_rv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite_drinks"/>
                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintTop_toBottomOf="@id/fav_drink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/drink_rv"
                    android:clipToPadding="false"
                    android:scrollbars="none"
                    android:scrollingCache="true"
                    android:orientation="horizontal"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                   />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>